[package]
name = "listen"
version = "0.1.1"
authors = ["Jared Forth <jaredforthdev@gmail.com>"]
edition = "2018"
description = "A listener for filesystem events that executes a function when the event occurs"
homepage = "https://crates.io/crates/listen"
repository = "https://github.com/jaredforth/listen"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/listen"
keywords = ["listener", "utility"]
categories = ["filesystem"]

[badges]
travis-ci = { repository = "jaredforth/listen" }
appveyor = { repository = "jaredforth/listen" }

[dependencies]
fsutils = "0.1.0"
walkdir = "2"